# repo2

./: CMakeLists.txt  Makefile  README.txt  Repo2Config.cmake.in  Repo2FindDeps.cmake
binary2/: CMakeLists.txt  binary2.c
library2/: CMakeLists.txt  library2.c
library2/public/: library2.h
